[package]
name = "faa_array_queue"
version = "0.1.2"
authors = ["junkerjorg <junkerjorg(twenty-one)(at)protonmail(dot)ch>"]
edition = "2018"
keywords = ["lock-free", "queue", "mpmc"]
description = "Fetch-And-Add Array Queue implementation for Rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/junkerjorg/faa_array_queue"
repository = "https://github.com/junkerjorg/faa_array_queue"
categories = ["concurrency", "algorithms"]

[dependencies]
peril = { version = "0.4" }
array-macro = { version = "2.0" }